-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.6.0 Beta3, 6.7
-
None
-
-
3
-
f91588923 (dev), fa2a7b256 (dev), 8a02a3584 (6.6), 95291e4a8 (6.6)
-
Foundation Sprint 87
When compiling qtwayland I get the following error:
error: ‘virtual void QPlatformWindow::setBackingStore(QPlatformBackingStore*)’ was hidden
[-Werror=overloaded-virtual=]
121 | virtual void setBackingStore(QPlatformBackingStore *) {}
Full error attached.
For Gerrit Dashboard: QTBUG-115691 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
493628,6 | Fix overloaded-virtual warning in QWaylandWindow::setBackingStore() | dev | qt/qtwayland | Status: ABANDONED | -2 | 0 |
493850,2 | QPlatformWindow: add a macro when setBackingStore() is virtual | dev | qt/qtbase | Status: MERGED | +2 | 0 |
493852,2 | QWaylandWindow: adapt to QPlatformWindow::setBackingStore() addition | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
493934,2 | QPlatformWindow: add a macro when setBackingStore() is virtual | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
494077,2 | QWaylandWindow: adapt to QPlatformWindow::setBackingStore() addition | 6.6 | qt/qtwayland | Status: MERGED | +2 | 0 |