QWaylandWindow: adapt to QPlatformWindow::setBackingStore() addition

When qtbase/a4ca9e80658bca7dad1529f03c1b59173a6ecf62 added a virtual
QPlatformWindow::setBackingStore(), this was hidden by the existing
QWaylandWindow::setBackingStore(), causing a FTBFS on
-developer-builds.

Fix by using the newly-added detection macro to turn the existing
function into an overrider.

Fixes: QTBUG-115691
Task-number: QTBUG-97482
Change-Id: If1d8c4443fe50030addb23331a50b7b9e1274626
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit fa2a7b256e2229d11b986007276b742d7be79e8f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>